--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <nav id = "sidenav">
     <ul>
       <li><a id = "closemenu">Close &times;</a></li>
-      <li><a href= "">賣場規範</a></li>
-      <li><a href= "">商品專區</a></li>
-      <li><a href= "">聯絡我們</a></li>
-      <li><a href= "">常見問題</a></li>
-      <li><a href= "">相關連結</a></li>
+      <a href= "../regulations/regulations.html"><li><img src="sidenav/regulations.png"></img>賣場規範</li></a>
+      <a href= ""><li><img src="sidenav/products.png"></img>商品專區</li></a>
+      <a href= ""><li><img src="sidenav/contact.png"></img>聯絡我們</li></a>
+      <a href= ""><li><img src="sidenav/FAQ.png"></img>常見問題</li></a>
+      <a href= ""><li><img src="sidenav/links.png"></img>相關連結</li></a>
     </ul>
+    <img src="LOGO.png" alt="logo" id="sideLogo"></img>
   </nav>
 
   <div id="wrapper">
