--- a/regulations/reguPurchase/purchase.html
+++ b/regulations/reguPurchase/purchase.html
@@ -14,7 +14,7 @@
   <nav id = "sidenav">
     <ul>
       <li><a id = "closemenu">Close &times;</a></li>
-      <a href= "regulations.html"><li><img src="../sidenav/regulations.png"></img>賣場規範</li></a>
+      <a href= "../regulations/regulations.html"><li><img src="../sidenav/regulations.png"></img>賣場規範</li></a>
       <a href= ""><li><img src="../sidenav/products.png"></img>商品專區</li></a>
       <a href= ""><li><img src="../sidenav/contact.png"></img>聯絡我們</li></a>
       <a href= ""><li><img src="../sidenav/FAQ.png"></img>常見問題</li></a>
@@ -28,7 +28,7 @@
 	      <a href="../index/index.html"><img src="../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
 	      <nav>
 	        <ul>
-            <li><a href= "regulations.html"><span class = "underline">賣場規範</span></a></li>
+            <li><a href= ""><span class = "underline">賣場規範</span></a></li>
 		        <li><a href= ""><span class = "underline">商品專區</span></a></li>
 		        <li><a href= ""><span class = "underline">聯絡我們</span></a></li>
 		        <li><a href= ""><span class = "underline">常見問題</span></a></li>
@@ -38,17 +38,14 @@
       <div id="menu">&#9776;</div>
     </header>
 
-    <div class = "content">
-      <img src="regutitle.png" alt="regulations" id="title"></img>
-      <h2> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧  </h2>
-      <h4> 	&#9830;	為避免爭議與交易糾紛，煩請務必詳細閱讀各項條款 &#9830; </h4>
-      <h4> 	&#9830;	購買後視為完全同意以下須知 &#9830; </h4>
-      <a href="reguAbout/about.html"><img id="category" src="categAbout.png" alt="about"></img></a>
-      <a href="reguPurchase/purchase.html"><img id="category" src="categPurchase.png" alt="Purchase"></img></a>
-      <a href="reguShippingFee/shippingFee.html"><img id="category" src="categShippingFee.png" alt="ShippingFee"></img></a>
-      <a href="reguPostSales/postSales.html"><img id="category" src="categPostSales.png" alt="PostSales"></img></a>
-  </div>
-  <div id = "page-mask"></div>
+  <div class = "content">
+
+
+
+
+
+ </div>
+ <div id = "page-mask"></div>
 </body>
 
 </html>
