--- a/regulations/regulations.html
+++ b/regulations/regulations.html
@@ -25,7 +25,7 @@
 
   <div id="wrapper">
     <header>
-	      <a href="../index/index.html"><img src="../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
+	      <a href="../index.html"><img src="../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
 	      <nav>
 	        <ul>
             <li><a href= "regulations.html"><span class = "underline">賣場規範</span></a></li>
@@ -43,10 +43,19 @@
       <h2> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧  </h2>
       <h4> 	&#9830;	為避免爭議與交易糾紛，煩請務必詳細閱讀各項條款 &#9830; </h4>
       <h4> 	&#9830;	購買後視為完全同意以下須知 &#9830; </h4>
-      <a href="reguAbout/about.html"><img id="category" src="categAbout.png" alt="about"></img></a>
-      <a href="reguPurchase/purchase.html"><img id="category" src="categPurchase.png" alt="Purchase"></img></a>
-      <a href="reguShippingFee/shippingFee.html"><img id="category" src="categShippingFee.png" alt="ShippingFee"></img></a>
-      <a href="reguPostSales/postSales.html"><img id="category" src="categPostSales.png" alt="PostSales"></img></a>
+      <img id="category" src="categAbout.png" alt="about"></img>
+      <img id="category" src="categPurchase.png" alt="Purchase"></img>
+      <img id="category" src="categShippingFee.png" alt="ShippingFee"></img>
+      <img id="category" src="categPostSales.png" alt="PostSales"></img>
+      <table class = "detailContainer">
+        <tr>
+          <td> <a href="reguAbout/about.html"><img id = "detailAbout" src="details.png"></img></a> </td>
+          <td> <a href="reguPurchase/purchase.html"><img id = "detailPurchase" src="details.png"></img></a> </td>
+        </tr>
+        <tr>
+          <td> <a href="reguShippingFee/shippingFee.html"><img id = "detailShipping" src="details.png"></img></a> </td>
+          <td> <a href="reguPostSales/postSales.html"><img id = "detailPostSales" src="details.png"></img></a> </td>
+        </tr>
   </div>
   <div id = "page-mask"></div>
 </body>
