--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav id = "sidenav">
     <ul>
       <li><a id = "closemenu">Close &times;</a></li>
-      <a href= "../regulations/regulations.html"><li><img src="sidenav/regulations.png"></img>賣場規範</li></a>
+      <a href= "regulations/regulations.html"><li><img src="sidenav/regulations.png"></img>賣場規範</li></a>
       <a href= ""><li><img src="sidenav/products.png"></img>商品專區</li></a>
       <a href= ""><li><img src="sidenav/contact.png"></img>聯絡我們</li></a>
       <a href= ""><li><img src="sidenav/FAQ.png"></img>常見問題</li></a>
@@ -25,10 +25,10 @@
 
   <div id="wrapper">
     <header>
-	      <a href="../index.html"><img src="LOGO.png" id="logo" alt="Kosame_shop"></img></a>
+	      <a href="index.html"><img src="LOGO.png" id="logo" alt="Kosame_shop"></img></a>
 	      <nav>
 	        <ul>
-            <li><a href= ""><span class = "underline">賣場規範</span></a></li>
+            <li><a href= "regulations/regulations.html"><span class = "underline">賣場規範</span></a></li>
 		        <li><a href= ""><span class = "underline">商品專區</span></a></li>
 		        <li><a href= ""><span class = "underline">聯絡我們</span></a></li>
 		        <li><a href= ""><span class = "underline">常見問題</span></a></li>
