--- a/regulations/reguAbout/about.html
+++ b/regulations/reguAbout/about.html
@@ -39,9 +39,43 @@
     </header>
 
   <div class = "content">
-    <img src="titleAbout.png" alt="About"></img></br>
-    <img src="content1.jpg" alt="content1" id="content"></img>
-    <img src="content2.jpg" alt="content2" id="content"></img>
+    <img src="titleAbout.png" alt="About" id="title"></img></br>
+    <table id="description">
+      <tr>
+        <td>
+          <img src="subtitle1.png" id="subtitle"></img></br>
+<p>
+凡是個人收藏之商品，皆會詳述已知物況，其餘請自行衡量，畢竟每個人的認知、接受度各有不同
+</p>
+          <img src="sepLine.png" id="separation"></img></br>
+          <img src="subtitle2.png" id="subtitle"></img></br>
+<p>
+個人視盜版商品為劣質品，故販售商品保證官方正版，絕無任何「港版/高仿/廠貨/散貨」等商品
+</p>
+          <img src="sepLine.png" id="separation"></img></br>
+          <img src="subtitle3.png" id="subtitle"></img></br>
+<p>
+預購商品除外。現貨商品即使如說明所述，仍會因時間流逝產生自然折舊，恕不接受「與當初想像有落差」、「看起來和照片不太一樣」等主觀意識要求退貨
+</p>
+          <img src="sepLine.png" id="separation"></img></br>
+          <img src="subtitle4.png" id="subtitle"></img></br>
+<p>
+若有任何疑問請於購買前提出。基本上不接受議價，但會視屬性、狀況、成本等接受小議。下單後才提出的議價，一律不會接受！
+</p>
+          <img src="sepLine.png" id="separation"></img></br>
+          <img src="subtitle5.png" id="subtitle"></img></br>
+<p>
+切莫以貪小便宜的心態，購買本賣場商品。若想以長時間的追蹤商品，來換取可能的降價空間亦可。但有些商品的屬性是會隨著時間流逝，不斷產生自然折舊，請慎重考慮！
+</p>
+          <img src="sepLine.png" id="separation"></img></br>
+          <img src="subtitle6.png" id="subtitle"></img></br>
+<p>
+個人只是業餘的收藏愛好者，基本上商品皆只有一件，恕無法提供換貨；如退貨則須符合<a href="../reguPostSales/postSales.html" style="color: #C30027">退貨條件</a>。出貨前皆會「拍照」存證並核對訂單資訊，故寄送錯誤／缺漏機率極低</br></br>
+</p>
+        </td>
+      </tr>
+    </table>
+
 
 
 
