--- a/regulations/reguPostSales/postSales.html
+++ b/regulations/reguPostSales/postSales.html
@@ -39,7 +39,7 @@
     </header>
 
   <div class = "content">
-    <img src="titlePostSales.png" alt="titlePostSales"></img></br>
+    <img src="titlePostSales.png" alt="titlePostSales" style="width: 250px; "></img></br>
     <div class = "contentTable">
       <table>
         <tr>
@@ -82,6 +82,8 @@
 
 <p id="mark">◆</p>退款事宜：商品回收確認無誤後，將於3天內進行退款，退款帳戶請務必填寫正確
             </pre>
+            <img src="refundCal.png" style="400px; margin-left: 13px;"></img></br>
+            <h4 id="alert">★非上述退換貨條件範圍內之商品，售出後一律不接受退換貨！★</h4>
           </td>
         </tr>
       </table>
