--- a/regulations/reguShippingFee/shippingFee.html
+++ b/regulations/reguShippingFee/shippingFee.html
@@ -14,21 +14,21 @@
   <nav id = "sidenav">
     <ul>
       <li><a id = "closemenu">Close &times;</a></li>
-      <a href= "../regulations/regulations.html"><li><img src="../sidenav/regulations.png"></img>賣場規範</li></a>
-      <a href= ""><li><img src="../sidenav/products.png"></img>商品專區</li></a>
-      <a href= ""><li><img src="../sidenav/contact.png"></img>聯絡我們</li></a>
-      <a href= ""><li><img src="../sidenav/FAQ.png"></img>常見問題</li></a>
-      <a href= ""><li><img src="../sidenav/links.png"></img>相關連結</li></a>
+      <a href= "../regulations.html"><li><img src="../../sidenav/regulations.png"></img>賣場規範</li></a>
+      <a href= ""><li><img src="../../sidenav/products.png"></img>商品專區</li></a>
+      <a href= ""><li><img src="../../sidenav/contact.png"></img>聯絡我們</li></a>
+      <a href= ""><li><img src="../../sidenav/FAQ.png"></img>常見問題</li></a>
+      <a href= ""><li><img src="../../sidenav/links.png"></img>相關連結</li></a>
     </ul>
-    <img src="../LOGO.png" alt="logo" id="sideLogo"></img>
+    <img src="../../LOGO.png" alt="logo" id="sideLogo"></img>
   </nav>
 
   <div id="wrapper">
     <header>
-	      <a href="../index/index.html"><img src="../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
+	      <a href="../../index.html"><img src="../../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
 	      <nav>
 	        <ul>
-            <li><a href= ""><span class = "underline">賣場規範</span></a></li>
+            <li><a href= "../regulations.html"><span class = "underline">賣場規範</span></a></li>
 		        <li><a href= ""><span class = "underline">商品專區</span></a></li>
 		        <li><a href= ""><span class = "underline">聯絡我們</span></a></li>
 		        <li><a href= ""><span class = "underline">常見問題</span></a></li>
@@ -39,6 +39,61 @@
     </header>
 
   <div class = "content">
+    <img alt="ShippingFee" src="titleShipping.png" id="title"></img></br>
+    <img alt="Sending" src="barSending.png" id="barTitle"></img>
+    <img alt="Conbination" src="barConbination.png" id="barTitle"></img></br>
+    <table id="description">
+      <tr>
+        <td>
+          郵寄掛號／包裹（存局候領）</br></br>
+          全家店到店「純取貨」</br></br>
+          7-11交貨便「純取貨」</br></br>
+        </td>
+        <td>
+          【郵寄】</br>
+          欲合併運費請先詢問，切勿擅自合併</br>
+          視商品總體積與重量而定，最高收至100元</br></br>
+
+          【超商】</br>
+          商品總體積與重量於寄件規範內皆可合併</br></br>
+
+          「現貨」與「預購」商品，如欲合併運費</br>
+          需先<p id="mark">付清金額</p>款項，否則將不予合併</br>
+        </td>
+      </tr>
+    </table></br>
+    <img alt="Calculation" src="barCalculation.png" id="barTitle"></img>
+    <img alt="Notice" src="barNotice.png" id="barTitle"></img></br>
+    <table id="description">
+      <tr>
+        <td>
+          【郵寄】</br>
+          視商品大小、重量、屬性而定</br>
+          收取範圍<p id="mark">30-100</p>元不等</br>
+          皆已含基本包裝工本費（材料費）</br>
+          採<p id="mark">多不退少不補</p>，請可接受再訂購</br></br>
+
+          【超商】</br>
+          商品須符合寄件規範（含外層輸送紙箱）</br>
+          須<p id="mark">≦45cm*30cm*30cm</p>；重量<p id="mark">＜5kg</p></br>
+          統一收取<p id="mark">60</p>元手續費</br>
+        </td>
+        <td>
+          【郵寄】</br>
+          訂單郵資<p id="mark">＜80</p>元者，若需額外「<p id="mark">加強包裝</p>」</br>
+          統一<p id="mark">加收10元</p>費用，否則皆以原訂郵資之</br>
+          最大體積、重量，進行最大限度的包裝防護</br></br>
+
+          【超商】</br>
+          商品若遺失／破損，物流賠償上限為<p id="mark">1000</p>元</br>
+          「高價值／易碎商品」不建議使用</br></br>
+
+          <p id="mark">使用何種寄送方式為「買家」所決定</br>
+          故決定之時，代表買家願意承擔該運送風險</p></br></br>
+        </td>
+      </tr>
+    </table>
+
 
 
 
