--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 	      </div>
       </section>
     </br>
-      <div class = "banner">
-        <h2> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧ <img src = 'newpd.png'></img> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧ </h2>
+      <div style="padding-bottom: 0;" class = "banner">
+        <h2> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧ <img src = 'newpd.png' style="width: 150px;"></img> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧ </h2>
       </div>
-      <section class="products">
+      <section style="padding-top: 0;" class="products">
 
         <div id="pdSlider">
           <div class="pdLeft">
