--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section>
     </br>
       <div style="padding-bottom: 0;" class = "banner">
-        <h2> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧ <img src = 'newpd.png' style="width: 150px;"></img> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧ </h2>
+        <h2> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧&nbsp&nbsp <p id="newpd" alt="newProducts"> 最新商品 </p> &nbsp&nbsp‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧ </h2>
       </div>
       <section style="padding-top: 0;" class="products">
 
