--- a/regulations/reguPostSales/postSales.html
+++ b/regulations/reguPostSales/postSales.html
@@ -43,23 +43,23 @@
     <div class = "contentTable">
       <table>
         <tr>
-          <td style = "background-color: rgb(195, 0, 97); color: white; text-align: center;">
-            ╭。☆本賣場商品均「無7天鑑賞期／試用期」☆。╮
+          <td style = "background-color: rgb(195, 0, 97); color: white; text-align: center; font-size: 24px;">
+            ◆◇本賣場商品均「無7天鑑賞期／試用期」◇◆
           </td>
         </tr>
         <tr>
-          <td  style = "color: #E90080; font-weight: 600; padding: 20px 17px;">
+          <td  style = "color: #C30061; font-weight: 600; padding: 20px 17px;">
             <p id="mark">◆</p>商品自送達／取貨日算起2日內，若有「款式／數量／品項」寄送錯誤，請立即反映！</br></br>
             <p id="mark">◆</p>全新未拆之商品，因拆封後難以判定責任歸屬，請以未拆封狀態檢視品相，確認是否有問題</br></br>
             <p id="mark">◆</p>中古／二手商品，每個人認知定義不同，不接受任何個人主觀意識要求退貨
           </td>
         </tr>
         <tr>
-          <td style = "width: 1100px; background-color: rgb(195, 0, 97); color: white;  white; text-align: center;">
-            ╭。☆本賣場商品均「設有退換貨之規則條件」☆。╮
+          <td style = "width: 1000px; background-color: rgb(195, 0, 97); color: white;  white; text-align: center; font-size: 24px;">
+            ◆◇本賣場商品均「設有退換貨之規則條件」◇◆
           </td>
         </tr>
-        <tr style = "color: #E90080; font-weight: 600; ">
+        <tr style = "color: #C30061; font-weight: 600; ">
           <td>
             <pre>
 <p id="mark">◆</p>退貨條件：寄送錯誤／「全新品」在未拆封時，即有”嚴重”生產瑕疵或缺件（非運送所導致）
@@ -67,12 +67,12 @@
 <p id="mark">◆</p>換貨條件：如退貨條件，且該商品在賣場之販售數量為複數時，才得以換貨，否則皆以退貨處理
 
 <p id="mark">※</p>來信告知的同時，為避免爭議，請附上該問題商品之照片┐
-                                                                                               <p id="mark">①商品「整體」照</p>
-                                                                                               <p id="mark">②商品「瑕疵特寫」照（寄送錯誤則免附）</p>
+                                                                                             <p id="mark">①商品「整體」照</p>
+                                                                                             <p id="mark">②商品「瑕疵特寫」照（寄送錯誤則免附）</p>
 
 <p id="mark">◆</p>退換貨方式：<p id="mark">①</p>經確認符合退換貨條件後，請填寫【<p id="mark">退換貨申請單</p>】
-                    　   <p id="mark">②</p>商品須包裝完整，並自行透過「<p id="mark">郵寄掛號/包裹</p>」寄回
-            　           <p id="mark">③</p>商品收到確認無誤後，再進行換貨/退款事宜
+<p style="visibility: hidden;">◆</p>                        <p id="mark">②</p>商品須包裝完整，並自行透過「<p id="mark">郵寄掛號/包裹</p>」寄回
+<p style="visibility: hidden;">◆</p>                        <p id="mark">③</p>商品收到確認無誤後，再進行換貨/退款事宜
 
 <p id="mark">◆</p>退換貨期限：商品自送達／取貨日算起<p id="mark">2天內提出，5天內</p>將商品<p id="mark">寄回</p>（須<p id="mark">回傳收據</p>照片）
 
@@ -82,7 +82,7 @@
 
 <p id="mark">◆</p>退款事宜：商品回收確認無誤後，將於3天內進行退款，退款帳戶請務必填寫正確
             </pre>
-            <img src="refundCal.png" style="400px; margin-left: 13px;"></img></br>
+            <img src="refundCal.png" style="width:720px; margin-left: 13px;"></img></br>
             <h4 id="alert">★非上述退換貨條件範圍內之商品，售出後一律不接受退換貨！★</h4>
           </td>
         </tr>
