--- a/regulations/reguPurchase/purchase.html
+++ b/regulations/reguPurchase/purchase.html
@@ -14,21 +14,21 @@
   <nav id = "sidenav">
     <ul>
       <li><a id = "closemenu">Close &times;</a></li>
-      <a href= "../regulations/regulations.html"><li><img src="../sidenav/regulations.png"></img>賣場規範</li></a>
-      <a href= ""><li><img src="../sidenav/products.png"></img>商品專區</li></a>
-      <a href= ""><li><img src="../sidenav/contact.png"></img>聯絡我們</li></a>
-      <a href= ""><li><img src="../sidenav/FAQ.png"></img>常見問題</li></a>
-      <a href= ""><li><img src="../sidenav/links.png"></img>相關連結</li></a>
+      <a href= "../regulations.html"><li><img src="../../sidenav/regulations.png"></img>賣場規範</li></a>
+      <a href= ""><li><img src="../../sidenav/products.png"></img>商品專區</li></a>
+      <a href= ""><li><img src="../../sidenav/contact.png"></img>聯絡我們</li></a>
+      <a href= ""><li><img src="../../sidenav/FAQ.png"></img>常見問題</li></a>
+      <a href= ""><li><img src="../../sidenav/links.png"></img>相關連結</li></a>
     </ul>
-    <img src="../LOGO.png" alt="logo" id="sideLogo"></img>
+    <img src="../../LOGO.png" alt="logo" id="sideLogo"></img>
   </nav>
 
   <div id="wrapper">
     <header>
-	      <a href="../index/index.html"><img src="../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
+	      <a href="../../index.html"><img src="../../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
 	      <nav>
 	        <ul>
-            <li><a href= ""><span class = "underline">賣場規範</span></a></li>
+            <li><a href= "../regulations.html"><span class = "underline">賣場規範</span></a></li>
 		        <li><a href= ""><span class = "underline">商品專區</span></a></li>
 		        <li><a href= ""><span class = "underline">聯絡我們</span></a></li>
 		        <li><a href= ""><span class = "underline">常見問題</span></a></li>
@@ -39,6 +39,80 @@
     </header>
 
   <div class = "content">
+    <img id="titlePurchase" src="titlePurchase.png" alt="titlePurchase" style="width: 250px;"></img></br>
+    <table id="tableTitle">
+      <tr>
+        <td>
+          <h2 id="subtitle">購買前的思考</h2>
+        </td>
+        <td>
+          <h2 id="subtitle">多詢問少爭議</h2>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h2 id="subtitle">詳閱各項說明</h2>
+        </td>
+        <td>
+          <h2 id="subtitle">不接受急件訂單</h2>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h2 id="subtitle">期限內完成匯款</h2>
+          <a href="" id="transferForm">匯款通知單>></a>
+        </td>
+        <td>
+          <h2 id="subtitle">需承擔運送風險</h2>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h2 id="subtitle">隨時留意訂單狀況</h2>
+        </td>
+        <td>
+          <h2 id="subtitle">代訂商品規則</h2>
+        </td>
+      </tr>
+    </table>
+    <table id="tableContent">
+      <tr>
+        <td>
+          請務必考慮清楚，不接受事後無故取消交易及棄標
+        </td>
+        <td>
+          現貨商品／代訂商品相關問題，歡迎來信詢問了解
+        </td>
+      </tr>
+      <tr>
+        <td>
+          每個人認知定義不同，要求完美無損者，請勿購買
+        </td>
+        <td>
+          款項確認後，現貨商品3日內寄出（不含例假日）
+      </tr>
+      <tr>
+        <td>
+          為避免商品缺貨，以三日為限，需延後請來信告知
+        </td>
+        <td>
+          配送過程無法掌握，僅能妥善包裝減少碰撞機會
+        </td>
+      </tr>
+      <tr>
+        <td>
+          後續聯絡為確保已收到通知訊息，請習慣給予回覆
+        </td>
+        <td>
+          <a href=""><p id="link1">代訂須知</p><p id="arrow1">>></p></a> ｜ <a href=""><p id="link2">代訂說明</p><p id="arrow2">>></p></a> ｜ <a href=""><p id="link3">注意事項</p><p id="arrow3">>></p></a>
+        </td>
+      </tr>
+    </table>
+
+
+
+
+
 
 
 
