--- a/regulations/reguShippingFee/shippingFee.html
+++ b/regulations/reguShippingFee/shippingFee.html
@@ -58,7 +58,7 @@
           商品總體積與重量於寄件規範內皆可合併</br></br>
 
           「現貨」與「預購」商品，如欲合併運費</br>
-          需先<p id="mark">付清金額</p>款項，否則將不予合併</br>
+          需先<p id="mark">付清全額</p>款項，否則將不予合併</br>
         </td>
       </tr>
     </table></br>
