--- a/regulations/regulations.html
+++ b/regulations/regulations.html
@@ -39,10 +39,10 @@
     </header>
 
     <div class = "content">
-      <img src="regutitle.png" alt="regulations" id="title"></img>
+      <h1 id="titleRegu" alt="regulations">賣場規範</h1>
       <h2> ‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧‧  </h2>
-      <h4> 	&#9830;	為避免爭議與交易糾紛，煩請務必詳細閱讀各項條款 &#9830; </h4>
-      <h4> 	&#9830;	購買後視為完全同意以下須知 &#9830; </h4>
+      <h4 style="color: #C30027"> 	&#9830;	為避免爭議與交易糾紛，煩請務必詳細閱讀各項條款 &#9830; </h4>
+      <h4 style="color: #C30027"> 	&#9830;	購買後視為完全同意以下須知 &#9830; </h4>
       <img id="category" src="categAbout.png" alt="about"></img>
       <img id="category" src="categPurchase.png" alt="Purchase"></img>
       <img id="category" src="categShippingFee.png" alt="ShippingFee"></img>
