--- a/regulations/reguPostSales/postSales.html
+++ b/regulations/reguPostSales/postSales.html
@@ -17,7 +17,7 @@
       <a href= "../regulations.html"><li><img src="../../sidenav/regulations.png"></img>賣場規範</li></a>
       <a href= ""><li><img src="../../sidenav/products.png"></img>商品專區</li></a>
       <a href= ""><li><img src="../../sidenav/contact.png"></img>聯絡我們</li></a>
-      <a href= ""><li><img src="../../sidenav/FAQ.png"></img>常見問題</li></a>
+      <a href= "../../FAQ/FAQ.html"><li><img src="../../sidenav/FAQ.png"></img>常見問題</li></a>
       <a href= ""><li><img src="../../sidenav/links.png"></img>相關連結</li></a>
     </ul>
     <img src="../LOGO.png" alt="logo" id="sideLogo"></img>
@@ -31,7 +31,7 @@
             <li><a href= "../regulations.html"><span class = "underline">賣場規範</span></a></li>
 		        <li><a href= ""><span class = "underline">商品專區</span></a></li>
 		        <li><a href= ""><span class = "underline">聯絡我們</span></a></li>
-		        <li><a href= ""><span class = "underline">常見問題</span></a></li>
+		        <li><a href= "../../FAQ/FAQ.html"><span class = "underline">常見問題</span></a></li>
 		        <li><a href= ""><span class = "underline">相關連結</span></a></li>
 	        </ul>
 	      </nav>
@@ -71,19 +71,19 @@
                                                                                              <p id="mark">②商品「瑕疵特寫」照（寄送錯誤則免附）</p>
 
 <p id="mark">◆</p>退換貨方式：<p id="mark">①</p>經確認符合退換貨條件後，請填寫【<p id="mark">退換貨申請單</p>】
-<p style="visibility: hidden;">◆</p>                        <p id="mark">②</p>請保持商品及其附件和包裝的完整性，並自行透過「<p id="mark">郵寄掛號/包裹</p>」寄回
+<p style="visibility: hidden;">◆</p>                        <p id="mark">②</p>商品須包裝完整，並自行透過「<p id="mark">郵寄掛號/包裹</p>」寄回
 <p style="visibility: hidden;">◆</p>                        <p id="mark">③</p>商品收到確認無誤後，再進行換貨/退款事宜
 
-<p id="mark">◆</p>退換貨期限：商品自送達／取貨日算起<p id="mark">2天內提出，5天內</p>將商品<p id="mark">寄回</p>
+<p id="mark">◆</p>退換貨期限：商品自送達／取貨日算起<p id="mark">2天內提出，5天內</p>將商品<p id="mark">寄回</p>（須<p id="mark">回傳收據</p>照片）
 
-<p id="mark">※</p>如退回商品短少、包裝缺乏完整性／逾期提出申請，恕不接受任何退換貨處理
+                       <p id="mark">※</p>逾期恕不接受任何退換貨處理
 
-<p id="mark">◆</p>運費負擔：符合退換貨條件之商品，寄回運費皆由賣家負擔，金額以退回包裹上的郵資為憑證
+<p id="mark">◆</p>運費負擔：符合退換貨條件之商品，寄回運費皆由賣家負擔
 
 <p id="mark">◆</p>退款事宜：商品回收確認無誤後，將於3天內進行退款，退款帳戶請務必填寫正確
             </pre>
             <img src="refundCal.png" style="width:720px; margin-left: 13px;"></img></br>
-            <h4 id="alert">★不符退貨條件之商品，售出後一律不接受退換貨★</h4>
+            <h4 id="alert">★非上述退換貨條件範圍內之商品，售出後一律不接受退換貨！★</h4>
           </td>
         </tr>
       </table>
