--- a/regulations/reguAbout/about.html
+++ b/regulations/reguAbout/about.html
@@ -17,7 +17,7 @@
       <a href= "../regulations.html"><li><img src="../sidenav/regulations.png"></img>賣場規範</li></a>
       <a href= ""><li><img src="../sidenav/products.png"></img>商品專區</li></a>
       <a href= ""><li><img src="../sidenav/contact.png"></img>聯絡我們</li></a>
-      <a href= ""><li><img src="../sidenav/FAQ.png"></img>常見問題</li></a>
+      <a href= "../../FAQ/FAQ.html"><li><img src="../sidenav/FAQ.png"></img>常見問題</li></a>
       <a href= ""><li><img src="../sidenav/links.png"></img>相關連結</li></a>
     </ul>
     <img src="../LOGO.png" alt="logo" id="sideLogo"></img>
@@ -31,7 +31,7 @@
             <li><a href= "../regulations.html"><span class = "underline">賣場規範</span></a></li>
 		        <li><a href= ""><span class = "underline">商品專區</span></a></li>
 		        <li><a href= ""><span class = "underline">聯絡我們</span></a></li>
-		        <li><a href= ""><span class = "underline">常見問題</span></a></li>
+		        <li><a href= "../../FAQ/FAQ.html"><span class = "underline">常見問題</span></a></li>
 		        <li><a href= ""><span class = "underline">相關連結</span></a></li>
 	        </ul>
 	      </nav>
