--- a/regulations/reguPurchase/purchase.html
+++ b/regulations/reguPurchase/purchase.html
@@ -60,7 +60,7 @@
       <tr>
         <td>
           <h2 id="subtitle">期限內完成匯款</h2>
-          <a href="" id="transferForm">匯款通知單>></a>
+          <a href="" id="transferForm">匯款通知單<p id="arrowForm">>></p></a>
         </td>
         <td>
           <h2 id="subtitle">需承擔運送風險</h2>
@@ -104,7 +104,7 @@
           後續聯絡為確保已收到通知訊息，請習慣給予回覆
         </td>
         <td>
-          <a href=""><p id="link1">代訂須知</p><p id="arrow1">>></p></a> ｜ <a href=""><p id="link2">代訂說明</p><p id="arrow2">>></p></a> ｜ <a href=""><p id="link3">注意事項</p><p id="arrow3">>></p></a>
+          <a href="agencyNotice/agencyNotice.html"><p id="link1">代訂須知</p><p id="arrow1">>></p></a> ｜ <a href="agencyManual/agencyManual.html"><p id="link2">代訂說明</p><p id="arrow2">>></p></a> ｜ <a href="agencyAlert/agencyAlert.html"><p id="link3">注意事項</p><p id="arrow3">>></p></a>
         </td>
       </tr>
     </table>
