--- a/page-template/page.html
+++ b/page-template/page.html
@@ -15,24 +15,24 @@
     <ul>
       <li><a id = "closemenu">Close &times;</a></li>
       <a href= "../regulations/regulations.html"><li><img src="../sidenav/regulations.png"></img>賣場規範</li></a>
-      <a href= ""><li><img src="../sidenav/products.png"></img>商品專區</li></a>
-      <a href= ""><li><img src="../sidenav/contact.png"></img>聯絡我們</li></a>
-      <a href= ""><li><img src="../sidenav/FAQ.png"></img>常見問題</li></a>
-      <a href= ""><li><img src="../sidenav/links.png"></img>相關連結</li></a>
+      <a href= "../merchandise/merchandise.html"><li><img src="../sidenav/products.png"></img>商品專區</li></a>
+      <a href= "../contact/contact.html"><li><img src="../sidenav/contact.png"></img>聯絡我們</li></a>
+      <a href= "../FAQ/FAQ.html"><li><img src="../sidenav/FAQ.png"></img>常見問題</li></a>
+      <a href= "../links/links.html"><li><img src="../sidenav/links.png"></img>相關連結</li></a>
     </ul>
     <img src="../LOGO.png" alt="logo" id="sideLogo"></img>
   </nav>
 
   <div id="wrapper">
     <header>
-	      <a href="../index/index.html"><img src="../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
+	      <a href="../index.html"><img src="../LOGO.png" id="logo" alt="Kosame_shop"></img></a>
 	      <nav>
 	        <ul>
-            <li><a href= ""><span class = "underline">賣場規範</span></a></li>
-		        <li><a href= ""><span class = "underline">商品專區</span></a></li>
-		        <li><a href= ""><span class = "underline">聯絡我們</span></a></li>
-		        <li><a href= ""><span class = "underline">常見問題</span></a></li>
-		        <li><a href= ""><span class = "underline">相關連結</span></a></li>
+            <li><a href= "../regulations/regulations.html"><span class = "underline">賣場規範</span></a></li>
+		        <li><a href= "../merchandise/merchandise.html"><span class = "underline">商品專區</span></a></li>
+		        <li><a href= "../contact/contact.html"><span class = "underline">聯絡我們</span></a></li>
+		        <li><a href= "../FAQ/FAQ.html"><span class = "underline">常見問題</span></a></li>
+		        <li><a href= "../links/links.html"><span class = "underline">相關連結</span></a></li>
 	        </ul>
 	      </nav>
       <div id="menu">&#9776;</div>
