--- a/merchandise/merchandise.html
+++ b/merchandise/merchandise.html
@@ -60,7 +60,7 @@
         <li class="superOption" id="1-5"><span id="option1">ACG相關影音 &#9654</span></li>
         <li class="superOption" id="1-6"><span id="option1">ACG週邊精品 &#9654</span></li>
         <li><span id="option1">絨毛玩偶／娃娃</span></li>
-        <li class="superOption" id="1-8"><span id="option1">PC／PlayStation 系列 &#9654</span></li>
+        <li class="superOption" id="1-8"><span id="option1">PC／PS 系列 &#9654</span></li>
       </ul>
       <ul class="subCateg1" id="sub1-2">
         <li id="subOption1">景品</li>
@@ -84,6 +84,7 @@
         <li id="subOption1">遊戲軟體</li>
         <li id="subOption1">電玩攻略本</li>
       </ul>
+      </br>
 
       <table id="categ">
         <tr>
