--- a/merchandise/merchandise.html
+++ b/merchandise/merchandise.html
@@ -118,7 +118,7 @@
     <h4 class="root">商品專區 > </h4>
     <div class="item">
       <ul id="pdBrowser">
-        <li id="1"><img src="pdMain/1.jpg"></img>
+        <li id="1"><a href="p1/p1.html"><img src="pdMain/1.jpg"></img></a>
         <p id="tag1">This is an apple <br>Yummy, juicy! <br><span style="line-height:32px;">NTD$100</span></p></li>
         <li id="2"><img src="pdMain/2.jpg"></img>
         <p id="tag2">This is a bird <br>Gorgeous, colorful! <br><span style="line-height:32px;">NTD$500</span></p></li>
