merchandise page done

--- a/merchandise/p1/p1.html
+++ b/merchandise/p1/p1.html
@@ -39,6 +39,7 @@
     </header>
 
   <div class = "content">
+    <h4 class="root">商品專區 > 現貨商品 > ACG周邊商品 > 其他周邊</h4>
     <div id="thumbnails">
       <ul>
         <li class="active-nail" id="1"><img src="photo/1.jpg"></img></li>
@@ -82,6 +83,41 @@
         </td>
       </tr>
     </table>
+    <div id="fourTabs">
+      <ul id="tabs">
+        <li id="tabInfo" class="active-tab">商品詳情</li>
+        <li id="tabStyle" class="tab">商品規格</li>
+        <li id="tabNotice" class="tab">注意事項</li>
+        <li id="tabQA" class="tab">商品問答</li>
+      </ul>
+      <div id="tabContent">
+        <div id="information">
+          LaFerrari是法拉利推出的第一款混合動力跑車，其發動機功率亦為法拉利量產車裡的翹楚，然而其油耗卻降低了40%。[6]在動力系統上，LaFerrari配備了一具V12的引擎，排量為6.3升（6262cc），最大馬力為800匹。[7]該車的特殊之處在於除了傳統的發動機外，還配備了一具動能回收系統，俗稱KERS。該系統能夠將汽車剎車時的動能儲存起來，並在加速時短時間內爆發出額外的馬力輸出。[8]和一般傳統的混合動力汽車不同，KERS系統的動力輸出能在發動機原有的馬力上再加163匹，相當於配備了一具增壓器。[9]LaFerrari的二氧化碳排放量為每公里330公克。</br></br>
+          法拉利還為LaFerrari裝配了碳陶瓷剎車碟，直徑分別為前車輪398公厘，後車輪380公厘。輪胎規格為前車輪265/30 R19，後車輪345/30 R20。[10]</br></br>
+          LaFerrari的車架採用了純碳纖維來製造以達到減輕重量的目的。法拉利官方稱該車架的剛性比它的上一代恩佐提升了了27%，車架勁度則提升了22%。[11]</br>
+         </br></br>
+         </div>
+        <div id="style">
+          車輛類別	超級跑車</br>
+          車體風格	雙門</br>
+        動力布局	中置引擎後輪驅動</br>
+          引擎	油電混合V12引擎配備動能回收系統</br>
+          變速器	7速雙離合手自一體</br>
+          軸距	2,665 mm（104.9寸）</br>
+          車身長度	4,702 mm（185.1寸）</br>
+          車身寬度	1,992 mm（78.4寸）</br>
+          車身高度	1,116 mm（43.9寸）</br>
+          整備質量	1,429公斤（3,150磅）</br>
+          </br></br>
+        </div>
+        <div id="notice">
+          LaFerrari（代號F70，內部代號F150）是法拉利推出的一款混合動力超級跑車。車名中「La」為義大利語中用於陰性單數名詞前的定冠詞，相當於英語的「The」。該車於2013年在日內瓦車展上首次亮相。它的設計借鑑了法拉利FXX賽車的測試成果。並計劃將車重控制在1,000公斤以內，[1] 但最終公布的重量為1,255公斤。[2]同恩佐一樣，LaFerrari為限量生產，目前計劃生產499輛。[3][4] 2016年8月31日，廠方宣布額外生產第500輛供慈善拍賣所用，所得收益將全數捐給2016年義大利中部地震的災民。[5]</br>
+          </br></br>
+        </div>
+      </div>
+
+
+
 
 
 
