--- a/merchandise/p1/p1.html
+++ b/merchandise/p1/p1.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 
-  <title>Website Design Practice | phchang</title>
+  <title>雨ಌ坊★(商品名稱)</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type= "text/javascript" src= "scripts.js"></script>
   <link href= "style.css" rel= "stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+  <script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -114,6 +114,43 @@
           LaFerrari（代號F70，內部代號F150）是法拉利推出的一款混合動力超級跑車。車名中「La」為義大利語中用於陰性單數名詞前的定冠詞，相當於英語的「The」。該車於2013年在日內瓦車展上首次亮相。它的設計借鑑了法拉利FXX賽車的測試成果。並計劃將車重控制在1,000公斤以內，[1] 但最終公布的重量為1,255公斤。[2]同恩佐一樣，LaFerrari為限量生產，目前計劃生產499輛。[3][4] 2016年8月31日，廠方宣布額外生產第500輛供慈善拍賣所用，所得收益將全數捐給2016年義大利中部地震的災民。[5]</br>
           </br></br>
         </div>
+        <div id="QA">
+          <p id="QAalert">注意！商品問答屬於公開留言，如問題有涉及個人隱私、資料等訊息，請透過E-mail來信詢問！</p>
+          <div class="Qs">
+            <span id="QAtype" style="font-weight:600;">問題：</span>測試測試~~~一行可以塞－－－－－－－－－－－－－－－－－這樣長度的字元數，超過就往下一行
+            底色會隨著行數增加變寬~預設1148x100px，字元數超過或提早自行段落下一行才會自動增加變寬。</br>
+            <span id="time" style="font-size:14px; font-weight:600; color:#808080;">(2016-09-30 23:19:30)</span>
+          </div>
+          </br>
+          <div class="As">
+            <span id="QAtype" style="font-weight:600;">答覆：</span>測試測試~~~一行可以塞－－－－－－－－－－－－－－－－－這樣長度的字元數，超過就往下一行
+            底色會隨著行數增加變寬~預設1148x100px，字元數超過或提早自行段落下一行才會自動增加變寬。</br>
+            <span id="time" style="font-size:14px; font-weight:600; color:#808080;">(2016-09-30 23:19:30)</span>
+          </div>
+          </br>
+          <div class="keyinQ">
+            <span id="QAtype" style="font-weight:600;">提出問題</span>（在賣家回覆前，問題屬於未公開狀態，賣家可選擇是否答覆；賣家回覆後，才會公開顯示於頁面中。）</br>
+            <form name="contactform" action="https://formspree.io/phchang1103@gmail.com" method="post" enctype="text/plain" id="merchandiseQ"  onreset="return allowReset()" onsubmit="return allowSend()">
+            Name: &nbsp<input type="text" name="name" id="formName" style="margin-left:2px;"><br>
+            E-mail: &nbsp<input type="text" name="_replyto" id="formMail"><br>
+            Comment:<br>
+            <textarea rows="6" cols="111" name="message" id="comment" placeholder="為避免遭到有心人士的利用，請勿在此處留下任何涉及個資的訊息，以免造成不必要的麻煩及損失！" maxlength="250"></textarea><br>
+            <span style="font-size: 14px;">（字數限制：250字元）</span>
+            <input type="hidden" name="_next" value="//site.io/thanks.html" />
+            <input type="hidden" name="_subject" value="雨ಌ坊★ACG Official Web Site│（商品名稱）商品問題" />
+            <input type="text" name="_gotcha" style="display:none" />
+            <input type="submit" value="Send">
+            <input type="reset" value="Reset">
+
+            </form>
+
+            </br></br>
+          </div>
+        </br></br>
+        <div class="g-recaptcha" data-sitekey="6LdwKwgUAAAAABIsBWzTsjxy-MfyQzJPa0NNroX2"></div>
+        </div>
+
+
       </div>
 
 
