--- a/merchandise/p1/p1.html
+++ b/merchandise/p1/p1.html
@@ -130,7 +130,7 @@
           </br>
           <div class="keyinQ">
             <span id="QAtype" style="font-weight:600;">提出問題</span>（在賣家回覆前，問題屬於未公開狀態，賣家可選擇是否答覆；賣家回覆後，才會公開顯示於頁面中。）</br>
-            <form name="contactform" action="https://formspree.io/phchang1103@gmail.com" method="post" enctype="text/plain" id="merchandiseQ"  onreset="return allowReset()" onsubmit="return allowSend()">
+            <form name="contactform" action="https://formspree.io/phchang1103@gmail.com" method="post" id="merchandiseQ"  onreset="return allowReset()" onsubmit="return allowSend()">
             Name: &nbsp<input type="text" name="name" id="formName" style="margin-left:2px;"><br>
             E-mail: &nbsp<input type="text" name="_replyto" id="formMail"><br>
             Comment:<br>
