--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
 
-  <title>Website Design Practice | phchang</title>
+  <title>雨ಌ坊★ACG Official Website</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type= "text/javascript" src= "indexscript.js"></script>
   <link href= "style.css" rel= "stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="favicon/favicon-196x196.png" sizes="196x196" />
+  <meta name="application-name" content="&nbsp;"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 </head>
 
