--- a/page-template/doubleLayers.html
+++ b/page-template/doubleLayers.html
@@ -7,8 +7,11 @@
   <script type= "text/javascript" src= "scripts.js"></script>
   <link href= "style.css" rel= "stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-</head>
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="../../favicon/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="../../favicon/favicon-196x196.png" sizes="196x196" />
+  <meta name="application-name" content="&nbsp;"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="../../favicon/mstile-144x144.png" />
 
 <body>
   <nav id = "sidenav">
