--- a/links/links.html
+++ b/links/links.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 
-  <title>Website Design Practice | phchang</title>
+  <title>雨ಌ坊★相關連結</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type= "text/javascript" src= "scripts.js"></script>
   <link href= "style.css" rel= "stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="../favicon/favicon-196x196.png" sizes="196x196" />
+  <meta name="application-name" content="&nbsp;"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png" />
 </head>
 
 <body>
@@ -49,7 +53,7 @@
         <td id="caption" colspan="2">網站說明</td>
       </tr>
       <tr>
-        <td id="subtitle" rowspan="2"><a href="" id="link">露天拍賣</a></td>
+        <td id="subtitle" rowspan="2"><a href="http://class.ruten.com.tw/user/index00.php?s=hanamatsuri0912" id="link">露天拍賣</a></td>
         <td id="description" colspan="2">不定期開放商品預購，接受「Amazon.jp／HMV」圖書│影音商品代訂</td>
       </tr>
       <tr>
@@ -66,7 +70,7 @@
         </td>
       </tr>
       <tr>
-        <td id="subtitle" rowspan="2"><a href="" id="link">蝦皮拍賣</a></td>
+        <td id="subtitle" rowspan="2"><a href="https://shopee.tw/kosame_shop" id="link">蝦皮拍賣</a></td>
         <td id="description" colspan="2">暫不開放任何商品預購，亦不接受任何商品代訂</td>
       </tr>
       <tr>
@@ -84,7 +88,7 @@
         </td>
       </tr>
       <tr>
-        <td id="subtitle" rowspan="2"><a href="" id="link">奇摩拍賣</a></td>
+        <td id="subtitle" rowspan="2"><a href="https://tw.bid.yahoo.com/booth/%E9%9B%A8-3212-%E5%9D%8A%E2%98%85-Y2982931620?bfe=1" id="link">奇摩拍賣</a></td>
         <td id="description" colspan="2">暫不開放任何商品預購，亦不接受任何商品代訂</td>
       </tr>
       <tr>
@@ -101,7 +105,7 @@
         </td>
       </tr>
       <tr>
-        <td id="subtitle" rowspan="2"><a href="" id="link">旋轉拍賣</a></td>
+        <td id="subtitle" rowspan="2"><a href="https://tw.carousell.com/kosame_shop/" id="link">旋轉拍賣</a></td>
         <td id="description" colspan="2">暫不開放任何商品預購，亦不接受任何商品代訂</td>
       </tr>
       <tr>
@@ -116,7 +120,7 @@
         </td>
       </tr>
       <tr>
-        <td id="subtitle" rowspan="2" style="border: none;"><a href="" id="link">買動漫</a></td>
+        <td id="subtitle" rowspan="2" style="border: none;"><a href="https://www.myacg.com.tw/seller_market.php?seller=9680" id="link">買動漫</a></td>
         <td id="description" colspan="2">不定期開放商品預購，接受「Amazon.jp／HMV」圖書│影音商品代訂
 </td>
       </tr>
@@ -136,7 +140,7 @@
         <td id="caption" colspan="2">網站說明</td>
       </tr>
       <tr>
-        <td id="subtitle"><a href="" id="link">TAAZE</br>讀冊生活</a></td>
+        <td id="subtitle"><a href="http://www.taaze.tw/container_seller_view.html?t=11&k=03&d=00&ci=13183749" id="link">TAAZE</br>讀冊生活</a></td>
         <td id="detail" colspan="2" style="text-indent:0 ;padding-left: 20px;">
           各式輕小說、漫畫、教科書等書籍，皆集中於此處販售。</br></br>
           該平台提供所有書況影片，且享有完整售後服務，歡迎參考逛逛！
