--- a/contact/contact.html
+++ b/contact/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Website Design Practice | phchang</title>
+  <title>雨ಌ坊★聯絡我們</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type= "text/javascript" src= "scripts.js"></script>
   <link href= "style.css" rel= "stylesheet">
