--- a/contact/contact.html
+++ b/contact/contact.html
@@ -88,7 +88,7 @@
           </table>
           </br>
           <input type="submit" value="送出" id="button1"><input type="reset" value="清除" id="button2">
-          <input type="hidden" name="_next" value="//index.html" />
+          <input type="hidden" name="_next" value="../thankyou/contactThankyou.html" />
           <input type="hidden" name="_subject" value="雨ಌ坊│聯絡信件" />
           <input type="text" name="_gotcha" style="display:none" />
         </form>
